dodanie metody globalnej testy

--- a/src/main/resources/templates/country/index.html
+++ b/src/main/resources/templates/country/index.html
@@ -56,7 +56,7 @@
             </tbody>
         </table>
 
-        <div th:replace="fragments/_pagination :: pagination"></div>
+        <div th:replace="fragments/_pagination-sort :: pagination-sort"></div>
     </div>
 </body>
 </html>
