--- a/src/main/resources/templates/note/collection/notes.html
+++ b/src/main/resources/templates/note/collection/notes.html
@@ -24,7 +24,9 @@
                             </div>
                             <div style="text-align: left; font-size: small">
                                 <span th:text="${note.denomination >= 1 ? #numbers.formatDecimal(note.denomination,1,0,'COMMA') :  #numbers.formatDecimal(note.denomination,1,2,'COMMA')} + ' ' + ${note.nameCurrency}"></span><br>
-                                <span th:text="${'Year: ' + note.itemDate}"></span>
+                                <span th:text="${'Year: ' + note.itemDate}"></span><br>
+                                <span th:text="${'Quality: ' + note.quality}"></span><br>
+                                <span th:text="${'Status: ' + note.status}"></span>
                                 <div sec:authorize="hasAuthority('ADMIN')">
 <!--                                    This content is only shown to ADMIN.-->
                                     <p th:text="${'Visible: ' + note.visible}"></p>
@@ -39,7 +41,7 @@
 
         </div>
         <div th:if="${totalPages} > 1">
-            <div th:replace="fragments/_pagination-new :: pagination(currencyId = ${notes[0].currencies.id})"></div>
+            <div th:replace="fragments/_pagination :: pagination(currencyId = ${notes[0].currencies.id})"></div>
         </div>
     </div>
 
