--- a/src/main/resources/templates/layouts/logo.html
+++ b/src/main/resources/templates/layouts/logo.html
@@ -2,5 +2,6 @@
         xmlns:th="http://www.thymeleaf.org">
     <div style="text-align: center; background-color: #4cb148">
         <span style="font-size: xx-large; font-family: initial">PECUNIA</span>
+        <span th:text="${testB}"></span>
     </div>
 </header>
