Dodanie modala wyswietlającego banknoty w kolekcji

--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -17,6 +17,7 @@
 </head>
 <body style="margin-block-end: 40px;">
 <div th:replace="layouts/logo :: logo"></div>
+<div th:replace="layouts/metalRate :: metalRate"></div>
 <!--header.html  that's here  -->
 <div th:replace="layouts/header :: header"></div>
 
