--- a/src/main/resources/templates/note/collection/notes.html
+++ b/src/main/resources/templates/note/collection/notes.html
@@ -18,6 +18,7 @@
                 <th:block th:each="note : ${notes}">
 
                         <div class="col-auto note-box">
+
                             <div style="display: flex; justify-content: center">
                                 <div th:replace="fragments/_image-midle :: image-midle(image = ${note.aversPath})"></div>
                                 <div th:replace="fragments/_image-midle :: image-midle(image = ${note.reversePath})"></div>
@@ -31,7 +32,11 @@
 <!--                                    This content is only shown to ADMIN.-->
                                     <p th:text="${'Visible: ' + note.visible}"></p>
                                 </div>
-                                <a th:replace="fragments/button/_button-show :: show(show = '/note/collection/show/' + ${note.id})"></a>
+<!--                                <a th:replace="fragments/button/_button-show :: show(show = '/note/collection/show/' + ${note.id})"></a>-->
+                                <a th:href="@{'/note/collection/show/' + ${note.id}}" class="btn btn-sm btn-info" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#Note-' + ${note.id}" >SHOW</a>
+                                <div class="modal fade" th:attr="id= 'Note-' + ${note.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div th:replace="note/collection/_showModal :: showModal"></div>
+                                </div>
                             </div>
 <!--                            <a th:href="@{'/note/collection/show/' + ${note.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>-->
 
