--- a/src/main/resources/templates/layouts/metalRate.html
+++ b/src/main/resources/templates/layouts/metalRate.html
@@ -1,11 +1,11 @@
 <header th:fragment="metalRate"
         xmlns:th="http://www.thymeleaf.org">
-    <div th:if="${apiMetal.responseStatusInfo.statusCode} == 200" style="text-align: center; background-color: #b0c8db">
-        <span th:text="${apiMetal.responseStatusInfo.statusCode}"></span>
-        <span th:text="*{#calendars.format(apiMetal.date,'yyyy-MM-dd HH:mm:ss')}"></span>
-        <block th:each=" metal : ${apiMetal.apiMetals}">
-            <span>[[${metal.metal}]]: [[${metal.price}]] |</span>
-        </block>
-
-    </div>
+    <span th:if="${getApiMetal.apiResponseInfo} != null ">
+        <div th:if="${getApiMetal.apiResponseInfo.responseStatusInfo.statusCode} == 200" style="text-align: center; background-color: #b0c8db">
+            <span th:text="*{#calendars.format(getApiMetal.apiResponseInfo.date,'yyyy-MM-dd HH:mm:ss')}"></span>
+            <block th:each=" metal : ${getApiMetal.apiMetals}">
+                <span>[[${metal.metal}]]: [[${metal.price}]] |</span>
+            </block>
+        </div>
+    </span>
 </header>
