--- a/src/main/resources/templates/note/forSell/index.html
+++ b/src/main/resources/templates/note/forSell/index.html
@@ -15,9 +15,10 @@
                     <div class="col-sm-2" style="width: 170px">
                         <div calss="container" style="margin: 15px; width: 160px">
 <!--                            <a th:href="@{'/note/forSell/notes/?selectCountryId=' + ${country.countryId}}">-->
+                            <a th:href="@{'/note/forSell/country/notes/' + ${country.countryId}}">
                                 <img th:src="@{'/images/flags/' + ${country.countryEn} + '.png'}" style="width: 80px; max-height: 60px"/><br>
                                 <span th:text="${country.countryPl + '(' + country.total + ')'}" style="font-size: small; display: flex"></span>
-<!--                            </a>-->
+                            </a>
                         </div>
                     </div>
                 </Block>
