Usunięcie kolumn z modelu i bazy danych: - bought - active - making - quality - status - img_type poprwki w widokach collection/notes.html collection._showModal.html

--- a/src/main/resources/templates/note/collection/_showModal.html
+++ b/src/main/resources/templates/note/collection/_showModal.html
@@ -25,7 +25,7 @@
                 <strong>Height: </strong>
                 <span th:text="${#numbers.formatDecimal(note.height,1,0)} + 'mm'"></span><br>
                 <strong>Quality: </strong>
-                <span th:text="${note.quality}"></span><br>
+                <span th:text="${note.qualities.quality}"></span><br>
             </div>
             <div class="modal-footer" style="background: lightgray">
                 <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
