--- a/src/main/resources/templates/coin/coin_list.html
+++ b/src/main/resources/templates/coin/coin_list.html
@@ -42,7 +42,7 @@
                             </div>
                         </td>
                         <td class="pt-1 pb-1">
-<!--                            <a th:href="@{'/coin/show/' + ${coin.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>-->
+                            <a th:href="@{'/coin/show/' + ${coin.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>
                             <a th:href="@{'/coin/edit/' + ${coin.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>
                             <a th:href="@{'/coin/delete/' + ${coin.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>
                         </td>
