--- a/src/main/resources/templates/note/show.html
+++ b/src/main/resources/templates/note/show.html
@@ -10,6 +10,9 @@
     <div layout:fragment="content" class="container">
         <h1 style="text-align: center">NOTE SHOW</h1>
         <div class="container">
+            <a th:replace="fragments/button/_button-back :: back(back = '/note/note_list/?currencySeries=' + ${note.currencies.currencySeries} + '&curId=' + ${note.currencies.id})"></a>
+        </div>
+        <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
                 <div class="col field " style="float: left">
                     <strong>Id: </strong>
