--- a/src/main/resources/templates/note/edit.html
+++ b/src/main/resources/templates/note/edit.html
@@ -14,6 +14,20 @@
         <div th:replace="note/_form :: form"></div>
         <p> <input type="submit" value="Zapisz Zmiany" class="btn btn-sm btn-primary"></p>
     </form>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+        <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
+            <img th:src="${noteForm.aversPath}" style="max-width: 100%; max-height: 350px"/>
+        </div>
+        <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
+            <img th:src="${noteForm.reversePath}" style="max-width: 100%; max-height: 350px"/>
+        </div>
+
+        <div class="container col field" style="padding: 10px 10px 10px 10px">
+        </div>
+    </div>
+    <a th:replace="fragments/button/_button-show :: show(show = '/note/show/' + ${noteForm.id})"></a>
+    <a th:replace="fragments/button/_button-back :: back(back = '/note/note_list/?currencySeries=' + ${noteForm.currencies.currencySeries} + '&curId=' + ${noteForm.currencies.id})"></a>
+
 
 </div>
 </body>
