--- a/src/main/resources/templates/note/note_list.html
+++ b/src/main/resources/templates/note/note_list.html
@@ -14,6 +14,7 @@
         <H3>Ilość banknotów - [[${notes.size}]]</H3>
         <div class="container">
             <a th:href="@{'/note/new/?curId=' + ${currency.id}}" class="btn btn-sm btn-primary">Add new Note</a>
+            <a th:replace="fragments/button/_button-back :: back(back = '/note/currency/' + ${currency.countries.countryEn})"></a>
         </div>
         <div class="container">
             <table class="table table-striped table-bordered table-hover table-sm">
@@ -45,48 +46,21 @@
                             </div>
                         </td>
                         <td class="pt-1 pb-1">
-                            <a th:href="@{'/note/show/' + ${note.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>
-                            <a th:href="@{'/note/edit/' + ${note.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>
-                            <a th:href="@{'/note/delete/' + ${note.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>
+<!--                            <a th:href="@{'/note/show/' + ${note.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>-->
+                            <a th:replace="fragments/button/_button-show_icon_small :: show_icon_small(show = '/note/show/' + ${note.id})"></a>
+
+<!--                            <a th:href="@{'/note/edit/' + ${note.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>-->
+                            <a th:replace="fragments/button/_button-edit_icon_small :: edit_icon_small(edit = '/note/edit/' + ${note.id})"></a>
+
+<!--                            <a th:href="@{'/note/delete/' + ${note.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>-->
+                            <a th:replace="fragments/button/_button-delete_icon_small :: delete_icon_small(delete = '/note/delete/' + ${note.id})"></a>
+
                         </td>
                     </tr>
                 </Block>
                 </tbody>
             </table>
         </div>
-
-
-<!--        <div class="container">-->
-<!--            <table class="table table-striped table-bordered table-hover table-sm">-->
-<!--                <thead class="thead-dark">-->
-<!--                <tr>-->
-<!--                    &lt;!&ndash;                <th>CON</th>&ndash;&gt;-->
-<!--                    <th>Lp:</th>-->
-<!--                    <th>Id</th>-->
-<!--                    <th>Seria</th>-->
-<!--                    <th style="width: 156px">Akcja</th>-->
-<!--                </tr>-->
-<!--                </thead>-->
-<!--                <tbody>-->
-<!--                <Block th:each="currency, i : ${currencies}">-->
-<!--                    <tr>-->
-<!--                        &lt;!&ndash;                    <td th:text="${country.getContinents().getContinentCode()}"></td>&ndash;&gt;-->
-<!--                        <td th:text="${i.index +1}"></td>-->
-<!--                        <td th:text="${currency.id}"></td>-->
-<!--                        <td th:text="${currency.currencySeries}"></td>-->
-<!--                        <td class="pt-1 pb-1">-->
-<!--                            <a th:href="@{'/currency/show/' + ${currency.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>-->
-<!--&lt;!&ndash;                            <a th:href="@{'/currency/edit/' + ${currency.id}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>&ndash;&gt;-->
-<!--&lt;!&ndash;                            <a th:href="@{'/currency/delete/' + ${currency.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>&ndash;&gt;-->
-<!--                        </td>-->
-<!--                    </tr>-->
-<!--                </Block>-->
-<!--                </tbody>-->
-<!--            </table>-->
-<!--          -->
-<!--        </div>-->
-
-
     </div>
 </body>
 </html>
