--- a/src/main/resources/templates/fragments/button/_button-show.html
+++ b/src/main/resources/templates/fragments/button/_button-show.html
@@ -1,6 +1,6 @@
 <div th:fragment="show"
      xmlns:th="http://www.w3.org/1999/xhtml">
-        <a th:href="@{${show}}" style="color: antiquewhite; text-decoration: none">
+        <a th:href="@{${show}}" style="color: antiquewhite; text-decoration: none; float: left">
             <div class="btn btn-info btn-sm" >
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
                     <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
