--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -51,6 +51,8 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" th:href="@{/coin}">Add Coin</a>
+                        <a class="dropdown-item" th:href="@{/coin/collection}">Colection</a>
+
                     </div>
                 </li>
                 <li class="nav-item dropdown">
