--- a/src/main/resources/templates/coin/collection/currency.html
+++ b/src/main/resources/templates/coin/collection/currency.html
@@ -13,12 +13,12 @@
 
         <div class="form-row align-items-center">
             <th:block th:each="currency : ${currencyByStatusList}">
-<!--                <a th:href="@{'/note/collection/notes/?selectCurrencyId=' + ${currency.currencyId} + '&status=KOLEKCJA'}">-->
+                <a th:href="@{'/coin/collection/coins/?selectCurrencyId=' + ${currency.currencyId} + '&status=KOLEKCJA'}">
                     <div class="col-auto currency-box ">
                         <span th:text="${currency.currencySeries}"></span><br>
                         <span>[[${'(' + currency.total + ')'}]]</span>
                     </div>
-<!--                </a>-->
+                </a>
             </th:block>
         </div>
     </div>
