--- a/src/main/resources/templates/coin/collection/coins.html
+++ b/src/main/resources/templates/coin/collection/coins.html
@@ -8,10 +8,13 @@
     <title>Country</title>
 </head>
 <body>
-    <div layout:fragment="content" class="container">
+    <div layout:fragment="content" class="container" style="background: aliceblue">
        <H2 style="text-align: center" >COINS COLECTION</H2>
-        <H4 th:text="${coins[0].currencies.currencySeries}" style="text-align: center" ></H4>
-<!--        <div th:replace="fragments/_flag :: flag(country = ${currencyByStatusList[0].countryEn})"></div>-->
+        <H4 th:text="${coins[0].currencies.currencySeries}" style="text-align: center; background: cornflowerblue" ></H4>
+        <div th:replace="fragments/_flag :: flag(country = ${coins[0].currencies.countries.countryEn})"></div>
+        <div style="display: flex;">
+            <a th:replace="fragments/button/_button-back :: back(back = '/coin/collection/currency/?selectCountryId=' + ${coins[0].currencies.countries.id})"></a>
+        </div>
 
         <div class="form-row align-items-center">
             <div class="form-row align-items-center">
@@ -32,10 +35,12 @@
 <!--                                    This content is only shown to ADMIN.-->
                                     <p th:text="${'Visible: ' + coin.visible}"></p>
                                 </div>
-<!--                                <a th:href="@{'/note/collection/show/' + ${coin.id}}" class="btn btn-sm btn-info" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#Coin-' + ${coin.id}" >SHOW</a>-->
-<!--                                <div class="modal fade" th:attr="id= 'Coin-' + ${coin.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
-<!--                                    <div th:replace="coin/collection/_showModal :: showModal"></div>-->
-<!--                                </div>-->
+                                <div style="margin: 5px">
+                                    <a th:href="@{'/coin/collection/show/' + ${coin.id}}" class="btn btn-sm btn-info" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#Coin-' + ${coin.id}" >SHOW</a>
+                                </div>
+                                <div class="modal fade" th:attr="id= 'Coin-' + ${coin.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div th:replace="coin/collection/_showModal :: showModal"></div>
+                                </div>
                             </div>
                         </div>
                 </th:block>
