--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -69,6 +69,7 @@
                         <a class="dropdown-item" th:href="@{/quality}">Quality</a>
                         <a class="dropdown-item" th:href="@{/status}">Status</a>
                         <a class="dropdown-item" th:href="@{/imageType}">Image Type</a>
+                        <a class="dropdown-item" th:href="@{/chart}">Chart</a>
                     </div>
                 </li>
 <!--                <li class="nav-item">-->
