--- a/src/main/resources/templates/currency/list.html
+++ b/src/main/resources/templates/currency/list.html
@@ -14,8 +14,8 @@
             <h5 th:text="${country.countryEn}"></h5>
         </div>
         <a th:href="@{'/currency/new/' + '?countryId=' + ${country.id}}" class="btn btn-sm btn-primary">Add Currency to [[${country.countryEn}]]</a>
-        <div th:if="${country.getCurrencies.size} == 0">
-            <h3>Brak Dodanych walut do państwa - [[${country.getCurrencies.size}]]</h3>
+        <div th:if="${country.getCurrencyDtos.size} == 0">
+            <h3>Brak Dodanych walut do państwa - [[${country.getCurrencyDtos.size}]]</h3>
         </div>
 
 <!--        <div>-->
@@ -37,7 +37,7 @@
             </tr>
             </thead>
             <tbody>
-            <Block th:each="currency, i : ${country.getCurrencies}">
+            <Block th:each="currency, i : ${country.getCurrencyDtos}">
                 <tr>
                     <!--                    <td th:text="${country.getContinents().getContinentCode()}"></td>-->
                     <td th:text="${(i.index + 1)}" class="pt-1 pb-1"></td>
