--- a/src/main/resources/templates/chart/index.html
+++ b/src/main/resources/templates/chart/index.html
@@ -5,7 +5,8 @@
       layout:decorate="~{layouts/layout}">
 <head>
     <title>Pecunia Chart</title>
-    <script src="/webjars/chartjs/2.9.4/Chart.min.js"></script>
+<!--    <script src="/webjars/chartjs/2.9.4/Chart.min.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <!--    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>-->
 </head>
 <body>
@@ -37,14 +38,15 @@
                     labels: labels,
                     datasets: [datasets]
                 },
-                options: {
-                    scales: {
-                        xAxes: [{
-                            type: 'category',
-                            labels: ['January', 'February', 'March', 'April', 'May', 'June']
-                        }]
-                    }
-                }
+                options: options1
+                //     {
+                //     scales: {
+                //         xAxes: [{
+                //             type: 'category',
+                //             labels: ['January', 'February', 'March', 'April', 'May', 'June']
+                //         }]
+                //     }
+                // }
                     // {
                     //     title: {
                     //         display: true,
